apps/fusion/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: fusion
    app.kubernetes.io/name: fusion
  name: fusion
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: fusion
    app.kubernetes.io/name: fusion
  type: ClusterIP
